--- a/src/app/watch-list/watch-list-item/watch-list-item.component.html
+++ b/src/app/watch-list/watch-list-item/watch-list-item.component.html
@@ -27,7 +27,7 @@
             [useSrcset]="true"
             [defaultImage]="'/assets/img/poster-placeholder.gif'"
             [errorImage]="'/assets/img/poster-placeholder.png'"
-            class="poster"
+            class="poster fade-in-out"
             [offset]="(600 | screenHeight) + 100"
           />
         </div>
@@ -94,7 +94,7 @@
             [useSrcset]="true"
             [defaultImage]="'/assets/img/poster-placeholder.gif'"
             [errorImage]="'/assets/img/poster-placeholder.png'"
-            class="poster"
+            class="poster fade-in-out"
             [offset]="(600 | screenHeight) + 100"
           />
           <div class="order">{{ indexNumber }}</div>
