Add my service provider list. Allow selection of services for recommended search. Add poster border to movie-poll-item.

--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
@@ -76,7 +76,7 @@
         <mat-panel-title><h2 #available>Movie providers</h2></mat-panel-title>
       </mat-expansion-panel-header>
       <watch-provider-select
-        (selectionChanged)="watchProvidersChange = true;"
+        (selectionChanged)="filteredWatchProviders = $event; watchProvidersChange = true;"
       ></watch-provider-select>
       <div
         class="load-more-button reload-button cursor-pointer"
