--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
@@ -89,6 +89,8 @@ $poster-base-unit: min(95vw, 472px);
 .reload-button {
   &:not(.active) {
     opacity: 0.6;
+    border: 1px solid #ccc;
+    color: #ccc;
   }
 }
 
