--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -72,7 +72,7 @@
           <watch-list-marker [movieId]="movie.id"></watch-list-marker>
           <div
             *ngIf="movie.posterPath"
-            [lazyLoad]="'https://image.tmdb.org/t/p/w92' + movie.posterPath"
+            [lazyLoad]="'https://image.tmdb.org/t/p/w92/' + movie.posterPath"
             class="poster-border"
           ></div>
           <img
