--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -683,7 +683,7 @@ $poster-base-unit: min(95vw, 472px);
 .watch-provider-image {
   height: 40px;
   width: 40px;
-  border-radius: 7px;
+  border-radius: 20%;
   background-size: contain;
 }
 
