--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -66,9 +66,20 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     background-size: cover;
   }
 
+  .poster-border {
+    $border-width: 0px;
+    width: calc(100% + 2 * $border-width);
+    height: calc(100% + 2 * $border-width);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: -1 * $border-width;
+    top: -1 * $border-width;
+    filter: blur(6px);
+  }
+
   .poster {
     width: $posterWidth;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
     border-radius: 6px;
 
