--- a/src/app/watch-list/watch-list-item/watch-list-item.component.html
+++ b/src/app/watch-list/watch-list-item/watch-list-item.component.html
@@ -10,7 +10,7 @@
           <div
             *ngIf="movie.posterPath"
             [lazyLoad]="'https://image.tmdb.org/t/p/w92/' + movie.posterPath"
-            class="poster-border"
+            class="poster-border fade-in-outs"
           ></div>
           <img
             [lazyLoad]="
