--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -73,7 +73,7 @@
           <div
             *ngIf="movie.posterPath"
             [lazyLoad]="'https://image.tmdb.org/t/p/w92/' + movie.posterPath"
-            class="poster-border"
+            class="poster-border fade-in-out"
           ></div>
           <img
             *ngIf="movie.posterPath"
