--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -52,7 +52,7 @@
             <div
               *ngIf="movie.posterPath"
               [lazyLoad]="'https://image.tmdb.org/t/p/w92/' + movie.posterPath"
-              class="poster-border"
+              class="poster-border fade-in-out"
             ></div>
             <img
               [lazyLoad]="
