--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -251,6 +251,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     color: #717171;
     padding-bottom: 10px;
     padding-top: 9px;
+    user-select: none;
 
     flex-grow: 1;
     align-items: flex-end;
