--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -28,6 +28,7 @@ $width: 40px;
     height: $half-height;
     line-height: $half-height;
     color: black;
+    user-select: none;
   }
 
   .button-container {
