Fix issue in Chrome with poster visibility with movie-poll-items. Remove movie poll items from recommendations.

--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
@@ -22,7 +22,7 @@
       matInput
       placeholder="🎬 Search for a movie"
       aria-label="Movie"
-      autocomplete="off"
+      autocomplete="something-something-title"
       [formControl]="movieControl"
       [matAutocomplete]="auto"
     />
