--- a/src/app/watch-list/watch-list.component.scss
+++ b/src/app/watch-list/watch-list.component.scss
@@ -174,6 +174,7 @@ mat-card[color="dark-primary"] {
   min-height: 100vh;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-content: flex-start;
 
   watch-list-item {
     margin: 3.8px;
