--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -15,3 +15,29 @@
     min-height: 256px;
   }
 }
+
+.recent-poll-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 0.6em;
+  padding: 10px 20px;
+  cursor: pointer;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(to right bottom, #aa70ea, #d9c6ee) border-box;
+  border-radius: 9px;
+  border: 2px solid transparent;
+  margin: 17px 0;
+  text-align: left;
+
+  .continue-text {
+    color: #8e8e8e;
+    font-size: 0.8em;
+    margin-bottom: 2px;
+  }
+
+  .recent-poll-title {
+    text-decoration: underline;
+  }
+}
