--- a/src/app/poll-management/poll-management.component.html
+++ b/src/app/poll-management/poll-management.component.html
@@ -128,13 +128,7 @@
         >Read more!</a
       >
     </p>
-    <button class="button google" (click)="login()">
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
-        class="flex self-center pr2"
-      />
-      Login with Google
-    </button>
+    <login-button (loginClicked)="login()"></login-button>
   </mat-card>
 </ng-template>
 
