--- a/src/app/login-dialog/login-dialog.component.scss
+++ b/src/app/login-dialog/login-dialog.component.scss
@@ -11,6 +11,7 @@
 
   .info {
     font-size: 0.8em;
+    margin-top: 25px;
   }
 
   .tech-details {
@@ -29,5 +30,20 @@
 }
 
 .button.google {
-  margin-top: 50px;
+  margin-top: 35px;
+}
+
+.login-with-nickname {
+  border-top: 1px solid #ccc;
+  margin-top: 35px;
+  margin-bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 0;
+  font-size: 14px;
+  transform: scale(0.9);
+  overflow: hidden;
+}
+
+.save-button-container {
+  margin: 0 auto;
 }
