--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -105,6 +105,8 @@ $posterHeight: calc(3 / 2 * $posterWidth);
 
   .original-title {
     font-size: 0.7em;
+    line-height: 1.25em;
+    margin-top: 2px;
   }
 
   .movie-info {
