--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -161,7 +161,6 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     position: relative;
     top: -12px;
     z-index: 4;
-    text-align: left;
   }
 
   .original-title {
@@ -527,7 +526,7 @@ div.dialog-content {
   }
 }
 
-.overview {
+.overview-text {
   text-align: justify;
 }
 
