Improve footer formatting and content.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,16 @@
 <div class="footer">
-  <span (click)="window.open('https://www.linkedin.com/in/kuismajari/')" title="Jari Kuisma @ LinkedIn">Jari Kuisma</span> 2022 <span (click)="window.open('https://github.com/acoustic-/poll-a-lot')">Github</span>
+  &#9426; Jari Kuisma {{ today | date : "YYYY" }}
+  |
+  <span
+    (click)="window.open('https://www.linkedin.com/in/kuismajari/')"
+    title="Jari Kuisma @ LinkedIn"
+    style="text-decoration: underline"
+    >LinkedIn</span
+  >
+  |
+  <span
+    (click)="window.open('https://github.com/acoustic-/poll-a-lot')"
+    style="text-decoration: underline"
+    >Github</span
+  >
 </div>
