--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -1,5 +1,12 @@
-<ng-container *ngIf="(movie$ | async); let movie; else pollLoaderItem">
-  <div class="dialog-content relative-container" mat-dialog-content>
+<ng-container
+  *ngIf="((movieObs$ | async) || (movie$ | async)); let movie; else pollLoaderItem"
+>
+  <div
+    class="dialog-content relative-container"
+    mat-dialog-content
+    #overview
+    scrollPreserve
+  >
     <div class="overview">
       <div class="absolute-container">
         <div class="close-button cursor-pointer" (click)="closeDialog()">
@@ -30,7 +37,7 @@
           >
             <div
               *ngFor="let b of movie.originalObject?.images.backdrops.slice(0, maxBgCount); let i = index"
-              (click)="selectedBackdrop$.next(i); backdropLoaded$.next(false)"
+              (click)="selectedBackdrop$.next(i); backdropLoaded$.next(false);"
               class="bd-selector"
               [class.bd-selected]="i === current.val"
             ></div>
@@ -118,11 +125,11 @@
         <div class="flex-column movie-details-right">
           <div
             class="credits"
-            *ngIf="movie?.originalObject; else movieRightInfoLoader"
+            *ngIf="movie?.originalObject || movie?.letterboxdRating; else movieRightInfoLoader"
           >
             <div
               class="movie-ratings"
-              *ngIf="movie?.originalObject; else movieRatingsLoader"
+              *ngIf="(movie?.originalObject || movie?.letterboxdRating); else movieRatingsLoader"
             >
               <!-- <div
               class="movie-rating tmdb cursor-pointer"
@@ -134,13 +141,123 @@
               ><mat-icon class="md-16">launch</mat-icon>
             </div> -->
               <div
+                *ngIf="movie.letterboxdRating"
+                class="movie-rating letterboxd-rating cursor-pointer"
+                [ngClass]="movie.letterboxdRating | number: '1.0'"
+                matTooltip="Letterboxd score"
+                (click)="openLetterboxd(movie.letterboxdItem)"
+              >
+                <svg
+                  width="20px"
+                  height="14px"
+                  viewBox="110 100 300 300"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                >
+                  <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+                  <title>letterboxd-decal-dots-neg-rgb</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs>
+                    <rect
+                      id="path-1"
+                      x="0"
+                      y="0"
+                      width="129.847328"
+                      height="141.389313"
+                    ></rect>
+                    <rect
+                      id="path-3"
+                      x="0"
+                      y="0"
+                      width="129.847328"
+                      height="141.389313"
+                    ></rect>
+                  </defs>
+                  <g
+                    id="letterboxd-decal-dots-neg-rgb"
+                    stroke="none"
+                    stroke-width="1"
+                    fill="none"
+                    fill-rule="evenodd"
+                  >
+                    <circle
+                      id="Circle"
+                      fill="#FFFFFF00"
+                      cx="250"
+                      cy="250"
+                      r="250"
+                    ></circle>
+                    <g
+                      id="dots-pos"
+                      transform="translate(61.000000, 180.000000)"
+                    >
+                      <g id="Dots">
+                        <ellipse
+                          id="Green"
+                          fill="#00E054"
+                          cx="189"
+                          cy="69.9732824"
+                          rx="70.0786517"
+                          ry="69.9732824"
+                        ></ellipse>
+                        <g
+                          id="Blue"
+                          transform="translate(248.152672, 0.000000)"
+                        >
+                          <mask id="mask-2" fill="white">
+                            <use xlink:href="#path-1"></use>
+                          </mask>
+                          <g id="Mask"></g>
+                          <ellipse
+                            fill="#40BCF4"
+                            mask="url(#mask-2)"
+                            cx="59.7686766"
+                            cy="69.9732824"
+                            rx="70.0786517"
+                            ry="69.9732824"
+                          ></ellipse>
+                        </g>
+                        <g id="Orange">
+                          <mask id="mask-4" fill="white">
+                            <use xlink:href="#path-3"></use>
+                          </mask>
+                          <g id="Mask"></g>
+                          <ellipse
+                            fill="#FF8000"
+                            mask="url(#mask-4)"
+                            cx="70.0786517"
+                            cy="69.9732824"
+                            rx="70.0786517"
+                            ry="69.9732824"
+                          ></ellipse>
+                        </g>
+                        <path
+                          d="M129.539326,107.022244 C122.810493,96.2781677 118.921348,83.5792213 118.921348,69.9732824 C118.921348,56.3673435 122.810493,43.6683972 129.539326,32.9243209 C136.268159,43.6683972 140.157303,56.3673435 140.157303,69.9732824 C140.157303,83.5792213 136.268159,96.2781677 129.539326,107.022244 Z"
+                          id="Overlap"
+                          fill="#fff"
+                        ></path>
+                        <path
+                          d="M248.460674,32.9243209 C255.189507,43.6683972 259.078652,56.3673435 259.078652,69.9732824 C259.078652,83.5792213 255.189507,96.2781677 248.460674,107.022244 C241.731841,96.2781677 237.842697,83.5792213 237.842697,69.9732824 C237.842697,56.3673435 241.731841,43.6683972 248.460674,32.9243209 Z"
+                          id="Overlap"
+                          fill="#fff"
+                        ></path>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+                <span class="score"
+                  >{{ movie.letterboxdRating | number: '1.1-1' }}</span
+                ><span class="rating-max">/5</span>
+              </div>
+              <div
                 *ngIf="movie.imdbRating"
                 (click)="openImdb(movie.imdbId)"
                 class="movie-rating imdb cursor-pointer"
                 matTooltip="IMDb score"
               >
                 <span class="score">{{ movie.imdbRating?.split("/")[0] }}</span
-                ><mat-icon class="md-16">launch</mat-icon>
+                ><span class="rating-max">/10</span>
               </div>
               <div
                 *ngIf="movie.metaRating"
@@ -186,7 +303,7 @@
           </div>
         </div>
       </div>
-      <div class="tagline" *ngIf="movie?.originalObject; else taglineLoader">
+      <div class="tagline" *ngIf="movie; else taglineLoader">
         <span *ngIf="movie.tagline?.length > 0">"{{ movie.tagline }}"</span>
       </div>
       <div class="overview-text">{{ movie.overview | hyphen }}</div>
@@ -206,6 +323,18 @@
           </div>
         </div>
       </ng-container>
+      <div class="more-at">
+        <span>More at</span>
+        <div class="imdb" (click)="openImdb(movie.imdbId)">IMDB</div>
+        <div class="tmdb" (click)="openTmdb(movie.id)">TMDB</div>
+        <div
+          *ngIf="movie.letterboxdRating"
+          class="letterboxd"
+          (click)="openLetterboxd(movie.letterboxdItem)"
+        >
+          Letterboxd
+        </div>
+      </div>
 
       <ng-container *ngIf="data.description?.length > 0">
         <div class="description" *ngIf="!editDescription">
@@ -365,6 +494,132 @@
             </div>
           </mat-expansion-panel>
         </ng-container>
+        <mat-expansion-panel
+          *ngIf="movie.letterboxdItem"
+          class="more-info-panel"
+        >
+          <mat-expansion-panel-header>
+            <mat-panel-title><h2>🎞️ More info</h2></mat-panel-title>
+          </mat-expansion-panel-header>
+          <div class="more-info-panel-body">
+            <!-- <img [lazyLoad]="movie.letterboxdItem.backdrop.sizes[0].url" /> -->
+            <ng-container *ngIf="trailerUrl$ | async; let url">
+              <iframe
+                class="movie-trailer"
+                *ngIf="url && movie.letterboxdItem.trailer.type === 'youtube'"
+                [src]="url"
+              >
+              </iframe>
+            </ng-container>
+            <div class="section countries">
+              <div class="mid-title">Country</div>
+              <div
+                class="country"
+                *ngFor="let country of movie.letterboxdItem.countries"
+              >
+                <img class="country-flag" [lazyLoad]="country.flagUrl" />
+                <span class="country-name">{{ country.name }}</span>
+              </div>
+            </div>
+            <div class="section languages">
+              <div class="mid-title">Language</div>
+              <div>
+                <span
+                  class="language comma"
+                  *ngFor="let language of movie.letterboxdItem.languages"
+                >
+                  {{ language.name }}
+                </span>
+              </div>
+            </div>
+            <div class="section alternative-titles">
+              <div class="mid-title">Alternative titles</div>
+              <div>
+                <span
+                  class="alternative-title comma"
+                  *ngFor="let alternative of movie.letterboxdItem.alternativeNames"
+                >
+                  {{ alternative }}
+                </span>
+              </div>
+            </div>
+            <div class="section crew">
+              <div class="mid-title">Crew</div>
+              <ng-container *ngFor="let group of letterboxdCrew$ | async">
+                <div class="contribution-type">{{ group.type }}</div>
+                <div>
+                  <span
+                    class="contribution-name comma"
+                    *ngFor="let contributor of group.contributors"
+                    >{{ contributor.name }}</span
+                  >
+                </div>
+              </ng-container>
+            </div>
+            <div class="section news" *ngIf="movie.letterboxdItem.news">
+              <div class="mid-title">News</div>
+              <div
+                class="news flex"
+                *ngFor="let news of movie.letterboxdItem.news.slice(0, -1)"
+              >
+                <div class="flex-column">
+                  <img class="image" [lazyLoad]="news.image.sizes[0].url" />
+                  <div class="title">{{ news.title }}</div>
+                  <div
+                    class="short-description"
+                    [innerHTML]="news.shortDescription"
+                  ></div>
+                  <div
+                    class="long-description"
+                    [innerHTML]="news.longDescription"
+                  ></div>
+                  <span>See more: </span><a [href]="news.url">{{ news.url }}</a>
+                </div>
+              </div>
+            </div>
+            <div
+              class="section stories"
+              *ngIf="openStories$ | async; let openStories"
+            >
+              <div
+                class="mid-title"
+                *ngIf="movie.letterboxdItem.recentStories.length"
+              >
+                Recent Stories
+              </div>
+              <div
+                class="story"
+                *ngFor="let story of movie.letterboxdItem.recentStories"
+              >
+                <div
+                  class="content"
+                  [class.open]="openStories.includes(story.id)"
+                >
+                  <img class="image" [lazyLoad]="story.image.sizes[0].url" />
+                  <div [id]="'story-' + story.id" class="title">
+                    {{ story.name }}
+                  </div>
+                  <div class="created">
+                    {{ story.whenCreated | date:"dd/MM/yyyy 'at' hh:mm"}}
+                  </div>
+                  <div class="author">
+                    <img [lazyLoad]="story.author.avatar.sizes[0].url" />
+                    {{ story.author.username }}
+                  </div>
+                  <div class="body" [innerHTML]="story.bodyHtml"></div>
+                </div>
+                <div
+                  class="show-more cursor-pointer"
+                  (click)="toggleStory(story.id)"
+                >
+                  {{ openStories.includes(story.id) ? 'Show less' : 'Show more'
+                  }}
+                </div>
+                <hr />
+              </div>
+            </div>
+          </div>
+        </mat-expansion-panel>
         <mat-expansion-panel *ngIf="movie.recommendations?.results.length">
           <mat-expansion-panel-header>
             <mat-panel-title
