--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -114,7 +114,7 @@
               </ng-container>
             </div>
           </div>
-          <div class="content">
+          <div class="content" (click)="showMovie()">
             <div class="movie-info">
               <span
                 class="creator"
@@ -161,7 +161,6 @@
             </div>
             <div
               class="show-more cursor-pointer use-select-none"
-              (click)="showMovie()"
             >
               Show more info
             </div>
