--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -37,6 +37,12 @@
         matTooltip="Show creators of individual poll items"
         >Show poll item creators</mat-slide-toggle
       >
+      <mat-slide-toggle
+      *ngIf="poll.moviepoll"
+      [(ngModel)]="poll.useSeenReaction"
+      matTooltip="Use seen reactions and smart sort"
+      >Seen reactions</mat-slide-toggle
+    >
       <!-- <mat-slide-toggle [(ngModel)]="poll.allowRandomDraw" matTooltip="Allow drawing a random option">Allow random option draw</mat-slide-toggle> -->
     </div>
     <mat-form-field class="full-width" style="margin-top: 17px">
