--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -116,7 +116,7 @@
             </div>
             </ng-container>
           </div>
-          <div class="content" (click)="showMovie()">
+          <div class="content" (click)="showMovie(status.pollItem.moviePollItemData)">
             <div class="movie-info">
               <span
                 class="creator"
