--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -120,6 +120,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     font-size: 11px;
     letter-spacing: 1px;
     text-transform: uppercase;
+    padding-right: 10px;
     // font-family: Roboto, sans-serif;
   }
 
