Add package version to about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,4 +12,5 @@
     This application uses the TMDb API but is not endorsed or certified by TMDb.
     Also ratings data from OMDb API is used.
   </p>
+  <p><span class="version">poll-a-lot v{{ version }}</span><br/></p>
 </mat-card>
