--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -423,6 +423,10 @@ div.dialog-content {
   }
 }
 
+.production-company.comma {
+  padding-right: 4px;
+}
+
 .movie-trailer {
   aspect-ratio: 16/9;
   border: none;
